2009-09-14 Arno Dudek  <webmaster@adgrafik.at>

1.0.0	First release

1.0.1	[BUGFIX] Fixed errors in Tx_AdGoogleMapsApi_MapPlugin.js

1.0.2	[FEATURE] Added min./max. zoom to MapDrawer.
		[BUGFIX] Fixed closeAllInfoWindows in Tx_AdGoogleMapsApi_MapPlugin.js
		[BUGFIX] Added getTypoScriptSetup for extbase >= 1.3.0beta1 in MapDrawer.php and MapPlugin.php.
		[BUGFIX] Added error at missing settings.
		[BUGFIX] Fixed Tx_AdGoogleMapsApi_ControlOptions_StreetView::getPrintOptions().
		[TASK] Changed control position constants name in AbstractControlOptions.php.
		[TASK] Changed loading settings to Tx_Extbase_Configuration_BackendConfigurationManager in MapPlugin.php.

1.0.3	[FEATURE] Added MarkerClusterer to the plugin.
		[TASK] Language improvments in MapDrawer.php
		[TASK] Added german language.
		[TASK] Renamed property pluginFile to pluginUrl.

1.0.4	[BUGFIX] Fixed wrong filereference in MapDrawer.php.

1.0.5	[FEATURE] Exteded panTo and fitBounds for more than one item.